--- a/starter-code/restful_controller_app/views/edit.erb
+++ b/starter-code/restful_controller_app/views/edit.erb
@@ -1,4 +1,4 @@
-<form method="PUT" action="/books/<%= @params.id %>"> <!-- should be /books/:id -->
+<form method="PUT" action="/books/<%= @params %>"> <!-- should be /books/:id -->
   <h4>Put action</h4>
   <input type="text" name="book" placeholder="Change book!">
   <button type="submit">Update</button>
